# soundhash

./: .gitignore  AESTHETICS.md  BYTES.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
assets/v1/: aux_layers.json  family_to_moods.json  groove_overlays.json  groove_templates.json  labels.json  layer_activation.json  manifest.json  meter_accents.json  mime_families.json  moods.json  tempo_pools.json  versions.lock.json
assets/v1/bass/: bass_articulation.json  bass_patterns.json  bass_synths.json
assets/v1/comp/: arp_shapes.json  chord_rhythm_patterns.json  comp_roles.json  comp_synths.json  strum_patterns.json
assets/v1/drums/: drumkits.json  escalation_algorithms.json
assets/v1/drums/fills/: acoustic-studio.json  brushes.json  dnb-breakbeat.json  hand-perc.json  house-909.json  jazz-kit.json  kalimba-tick.json  latin-conga.json  lo-fi-tape.json  mallets.json  music-box-tick.json  trap-808.json
assets/v1/drums/patterns/: acoustic-studio.json  brushes.json  dnb-breakbeat.json  hand-perc.json  house-909.json  jazz-kit.json  kalimba-tick.json  latin-conga.json  lo-fi-tape.json  mallets.json  music-box-tick.json  trap-808.json
assets/v1/expression/: cc_routing.json  humanization_profiles.json  velocity_curves.json
assets/v1/harmony/: progressions.json  resolution_rules.json  voicings.json
assets/v1/melody/: accent_skeleton.json  contours.json  motif_rhythms.json  mutation_operators.json  phrase_shapes.json  scale_subsets.json
cross-mood/: showcase.html  showcase.md
research/: CONTEXT.md
research/01-key-mode/: codex_review.md  findings_final.md  findings_v1.md  gemini_review.md  prompt.txt  summary.md
research/02-tempo-groove/: codex_review_v2.md  findings_final_v2.md  gemini_review_v2.md  summary_v2.md
research/03-form-energy/: energy_curves.json  forms.json
research/04-harmony-voicing/: tables_v1_summary.md
research/05-drums-fills/: tables_v1_summary.md
research/06-bass/: tables_v1_summary.md
research/07-comping/: tables_v1_summary.md
research/08-melody/: codex_review.md  codex_review_v2.md  findings_final.md  findings_v1.md  findings_v2.md  gemini_review.md  gemini_review_v2.md  mutation_operators.md  summary.md  summary_v2.md
research/09-aux-layers/: layer_activation_extension.md
research/10-midi-expression/: articulation.json  codex_review.md  expression_playbook.md  gemini_review.md
research/11-mime-mood/: findings_v1.md
research/12-rendering/: codex_review.md  findings_final.md  findings_v1.md  gemini_review.md  render_pipeline.md  summary.md  synth_pool.json  versions.lock.json
research/13-hash-architecture/: byte_budget.md  decoder_api.py  determinism_invariants.md  tables_format.md  version_manifest.md
research/14-perceptual-determinism/: corpus_test_plan.md  determinism_contract.md  distinguishability_metric.md  metadata_embedding.md  output_normalization.md
research/adv-review/: dim-summary.md  impl-codex-2.md  impl-codex.md  impl-gemini-2.md  impl-gemini.md  impl-summary.md  quality-summary.md  sound-codex.md  sound-gemini.md  sound-summary.md  spectrum-summary.md
showcase_design/: showcase.html  showcase.md
src/mhash/: __init__.py  cli.py  dashboard.py  decode.py  mhash.py  setup_assets.py  sf3_to_sf2.py  showcase.py  spec.py
src/mhash/render/: audio.py  fx.py  midi.py
src/mhash/tables/: __init__.py
src/soundhash/: __init__.py  cli.py  dashboard.py  decode.py  mhash.py  mime.py  play.py  quality.py  setup_assets.py  sf3_to_sf2.py  showcase.py  spec.py  theory.py
src/soundhash/render/: audio.py  fx.py  midi.py
src/soundhash/tables/: __init__.py
tests/: test_byte_budget.py  test_corpus.py  test_decode_invariants.py  test_label_registry.py  test_midi_render.py
