[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soundhash"
version = "0.0.1"
description = "Deterministic musical hash: SHA-256 -> 30s of pleasant audio"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.0",
    "python-magic>=0.4.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Audio rendering needs fluidsynth (system binary, install via brew/apt)
# plus pyloudnorm for LUFS normalisation and pedalboard for FX chains.
audio = [
    "pyloudnorm>=0.1.1",
    "pedalboard>=0.9",
]
# Heuristic + psychoacoustic quality scoring.
quality = [
    "pyloudnorm>=0.1.1",
    "mosqito>=1.2",
]
dev = [
    "pytest>=8",
    "hypothesis>=6.100",
]

[project.scripts]
soundhash = "soundhash.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/soundhash"]

[tool.pytest.ini_options]
testpaths = ["tests"]
