[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soundhash"
version = "0.0.1"
description = "Deterministic musical hash: SHA-256 -> 30s of pleasant audio"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.0",
    "python-magic>=0.4.27",
    "numpy>=1.26",
    # Audio rendering + LUFS norm + per-mood FX chains: pulled by default so
    # `pip install soundhash` gets a working `mhash` out of the box. The only
    # remaining system dep is the `fluidsynth` CLI binary itself.
    "pyloudnorm>=0.1.1",
    "pedalboard>=0.9",
]

[project.optional-dependencies]
# Psychoacoustic quality scoring (mosqito is heavy; opt-in).
quality = [
    "mosqito>=1.2",
]
dev = [
    "pytest>=8",
    "hypothesis>=6.100",
]

[project.scripts]
soundhash = "soundhash.cli:main"
mhash = "soundhash.mhash:main"

[tool.hatch.build.targets.wheel]
packages = ["src/soundhash"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "soundhash/_assets"

[tool.pytest.ini_options]
testpaths = ["tests"]
